# ClaudeTest_1

./: .gitignore  QUICKSTART.md  README.md  main.py  plan.md  pyproject.toml  requirements.txt  setup.sh
car_scraper/: __init__.py
car_scraper/database/: __init__.py  csv_manager.py
car_scraper/models/: car_posting.py
car_scraper/scrapers/: __init__.py  response_motors_scraper.py
inventory_gatherer/: __init__.py
inventory_gatherer/database/: csv_manager.py
inventory_gatherer/gatherers/: __init__.py  rm_gatherer.py
inventory_gatherer/models/: __init__.py  car_posting.py
