[project]
name = "car-inventory-gatherer"
version = "1.0.0"
description = "A Python application for gathering and analyzing car inventory data from automotive websites"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.2",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configuration
dev-dependencies = []

[tool.uv.sources]
# Specify sources if needed for private packages
